exe et correction